<resources>
    <string name="app_name">A.L.I.E</string>
    <string name="builderTitle">A.L.I.E</string>
    <string name="builderMessage">Are you sure you want to exit?</string>
    <string name="builderNegativeButton">No</string>
    <string name="builderPositiveButton">Yes</string>
    <string name="builder2Title">Permission Needed!</string>
    <string name="builder2Message">Permission is Required to Access Storage!</string>
    <string name="builder2NegativeButton">Deny Permission</string>
    <string name="builder2PositiveButton">Grant Permission</string>
    <string name="builder3Title">Permission Needed!</string>
    <string name="builder3Message">Permission is Required to Access Network Location!</string>
    <string name="builder3NegativeButton">Deny Permission</string>
    <string name="builder3PositiveButton">Grant Permission</string>
    <string name="titleHome">Home</string>
    <string name="titleSpeaker">Volume</string>
    <string name="titleFan">Smart Fan</string>
    <string name="titleLED">LED Lights</string>
    <string name="titleAccount">Account</string>
    <string name="titleProfile">Profile</string>
    <string name="titleLogout">Logout</string>
    <string name="titleSettings2">Settings</string>
    <string name="titleSettings">Settings</string>
    <string name="titleHelp">Help</string>
    <string name="titleVolume">Volume</string>
    <string name="titleBluetooth">Bluetooth</string>
    <string name="titleReview">Review</string>
    <string name="title_activity_configuration">ConfigurationActivity</string>
    <string name="textView1">The Second Dawn</string>
    <string name="textView2">A.L.I.E@support.ca</string>
    <string name="imageView1">This is the image of my App Icon that will be displayed in the Navigation Drawer.</string>
    <string name="openNavigationDrawer">Open Navigation Drawer</string>
    <string name="closeNavigationDrawer">Close Navigation Drawer</string>
    <string name="toastMessage1">Opening Settings…</string>
    <string name="toastMessage2">Help</string>
    <string name="toastMessage3">Volume</string>
    <string name="toastMessage4">Bluetooth</string>
    <string name="toastMessage5">Review</string>
    <string name="toastMessage6">Permission is Granted!</string>
    <string name="toastMessage7">Permission Granted!</string>
    <string name="toastMessage8">Permission Denied!</string>
    <string name="toastMessage9">Login Successful!</string>
    <string name="toastMessage10">Please Check Your Email to Verify Your Account!</string>
    <string name="toastMessage11">Failed to Login! Please Check your Credentials!</string>
    <string name="toastMessage12">User has been Registered Successfully!</string>
    <string name="toastMessage13">Failed to Register!</string>
    <string name="toastMessage14">This Email is Taken Already!</string>
    <string name="toastMessage15">Please Check your Email to Reset your Password!</string>
    <string name="toastMessage16">An Error has Occurred, Please Try Again!</string>
    <string name="toastMessage17">Permission Granted!</string>
    <string name="toastMessage18">Permission Denied!</string>
    <string name="toastMessage19">Sign In Failed!</string>
    <string name="toastMessage20">Authentication Failed!</string>
    <string name="toastMessage21">Turning on Bluetooth…</string>
    <string name="toastMessage22">Bluetooth is Already On!</string>
    <string name="toastMessage23">Making Device Discoverable!</string>
    <string name="toastMessage24">Bluetooth Off</string>
    <string name="toastMessage25">Bluetooth is Already Off!</string>
    <string name="toastMessage26">Turn on Bluetooth to Show Paired Devices!</string>
    <string name="toastMessage27">Bluetooth is Now Turned On!</string>
    <string name="toastMessage28">Unable to Turn on Bluetooth!</string>
    <string name="toastMessage29">ON</string>
    <string name="toastMessage30">OFF</string>
    <string name="toastMessage31">Failed to Retrieve!</string>
    <string name="toastMessage32">Please Check Your Email to Reset your Password!</string>
    <string name="toastMessage33">An Error has Occurred, Please Try Again!</string>
    <string name="toastMessage34">Your Review has Been Sent! Thank You :)</string>
    <string name="toastMessage35">Your Message has Been Sent to The Second Dawn! Thank You :)</string>
    <string name="snackbar1">Permission is Granted!</string>
    <string name="snackbar2">Permission is Denied!</string>
    <string name="snackbar3">Permission is Granted!</string>
    <string name="snackbar4">Permission is Denied!</string>
    <string name="snackbar5">Red Color is Selected!</string>
    <string name="snackbar6">Green Color is Selected!</string>
    <string name="snackbar7">Blue Color is Selected!</string>
    <string name="snackbar8">RGB Mode is Activated!</string>
    <string name="snackbar9">White Mode is Activated!</string>
    <string name="textView3">A.L.I.E</string>
    <string name="imageView2">This is the image of my App Icon that will be displayed in the Login Screen</string>
    <string name="textView4">Your Amazing A.I</string>
    <string name="editText1">Email Address:</string>
    <string name="editText2">Password:</string>
    <string name="button1">LOGIN</string>
    <string name="textView5">Register</string>
    <string name="textView6">Forgot Password?</string>
    <string name="emptyEmailError1">Email Address is Required!</string>
    <string name="matchEmailError1">Please Enter a Valid Email Address:</string>
    <string name="emptyPasswordError1">Password is Required!</string>
    <string name="lengthPasswordError1">Your Password Should be at Least 6 Characters Long!</string>
    <string name="imageView29">This is an Image of Google Icon Used to Sign in</string>
    <string name="imageView30">This is an Image of Facebook Icon Used to Sign in</string>
    <string name="checkBox">Remember Me</string>
    <string name="rememberMeCheckbox">checked</string>
    <string name="sharedPrefsvEmail">svEmail</string>
    <string name="sharedPrefsvPassword">svPassword</string>
    <string name="file_Email">Remember Me</string>
    <string name="rememberMeCheckBoxChecked">checked</string>
    <string name="rememberMeCheckBoxCheckedBoolean">checked</string>
    <string name="textView7">A.L.I.E</string>
    <string name="imageView3">This is the image of my App Icon that will be displayed in the Registration Screen</string>
    <string name="textView8">Your Amazing A.I</string>
    <string name="editText3">Email Address:</string>
    <string name="editText4">Password:</string>
    <string name="editText5">Confirm Password:</string>
    <string name="button2">REGISTER</string>
    <string name="emptyEmailError2">Email Address is Required!</string>
    <string name="matchEmailError2">Please Enter a Valid Email Address:</string>
    <string name="emptyPasswordError2">Password is Required!</string>
    <string name="lengthPasswordError2">Your Password Should be at Least 6 Characters Long!</string>
    <string name="matchPasswordErrorAlphabetNum">Your Password Should Include Alphabetic Letters and Numbers!</string>
    <string name="matchPasswordError1Char">Your Password Should have at Least 1 Special Character!</string>
    <string name="matchPasswordError1UpperLetter">Your Password Should have at Least 1 Upper Case Letter!</string>
    <string name="matchPasswordError1Digit">Your Password Should have at Least 1 Digit!</string>
    <string name="confirmPasswordError1">Passwords Do Not Match!</string>
    <string name="firebaseReference1">Users</string>
    <string name="imageButton1">This is an Image Button of the Left Arrow in Register Screen</string>
    <string name="editText11">Full Name:</string>
    <string name="editText12">Phone Number:</string>
    <string name="emptyNameError2">Full Name is Required!</string>
    <string name="emptyPhoneError2">Phone Number is Required!</string>
    <string name="lengthPhoneError2">Your Phone Number Must be 10 Digits Long!</string>
    <string name="matchPhoneError2">Please Enter a Valid Phone Number!</string>
    <string name="textView9">LED Controls</string>
    <string name="switch5">Lights OFF/ON</string>
    <string name="switch6">White/RGB</string>
    <string name="button7">Color Picker</string>
    <string name="imageView38">This is an Image of the LED Icon</string>
    <string name="button8">Location Permission</string>
    <string name="ledPowerOn">Lights: ON</string>
    <string name="ledPowerOff">Lights: OFF</string>
    <string name="textView10">Speaker Screen</string>
    <string name="imageView10">This is an Image of my Speaker Picture</string>
    <string name="imageView14">This is an Image of my Speaker Picture</string>
    <string name="imageView41">This is an Image of the Music Icon</string>
    <string name="imageView42">This is an Image of the Speaker Icon.</string>
    <string name="imageButton11">This is an Image of The File Icon.</string>
    <string name="button14">PLAY</string>
    <string name="button15">Pause</string>
    <string name="switch7">Power</string>
    <string name="textView25">Volume</string>
    <string name="textView26">Choose File:</string>
    <string name="mediaBtn1">PLAY</string>
    <string name="mediaBtn2">PAUSE</string>
    <string name="mediaTitle1">TITLE</string>
    <string name="medaTitle2">00:00 / 00:00</string>
    <string name="speakerIntent">audio/*</string>
    <string name="textView11">Smart Fan Screen</string>
    <string name="imageView16">This is an Image of my 1st Fan Picture</string>
    <string name="button3">Store Use data</string>
    <string name="textView27">Fan Speed</string>
    <string name="switch8">Turn ON</string>
    <string name="slider1">This is a Slider for Fan Speed</string>
    <string name="TheSecondDawnRadioButton1">Low</string>
    <string name="TheSecondDawnRadioButton2">Med</string>
    <string name="TheSecondDawnRadioButton3">High</string>
    <string name="imageView22">This is an image of the App Icon in the Home Screen</string>
    <string name="textView12">A.L.I.E</string>
    <string name="textView13">Welcome to your Amazing A.I!</string>
    <string name="textView19">Press MIC Button to Input Voice</string>
    <string name="imageButton5">This is a Light Blue Gradient Button that will be used to Turn the Speaker ON/OFF</string>
    <string name="imageView34">This is an Image of the Speaker Icon</string>
    <string name="imageButton6">This is a Light Blue Gradient Button that will be used to Turn the LED ON/OFF</string>
    <string name="imageView35">This is an Image of the LED Icon</string>
    <string name="imageButton7">This is a Light Blue Gradient Button that will be used to Turn the Smart Fan ON/OFF</string>
    <string name="imageView36">This is an Image of the Smart Fan Icon</string>
    <string name="imageButton3">This is an Image Button of the Left Arrow in Settings Screen</string>
    <string name="textView20">Settings Screen</string>
    <string name="textView33">Orientation</string>
    <string name="switch9">Portrait</string>
    <string name="textView34">Current Screen Orientation:</string>
    <string name="textView35">Volume</string>
    <string name="textView36">Current Volume:</string>
    <string name="imageView31">This is an Image of the Default Profile Icon that will be Displayed on Profile Screen</string>
    <string name="textView14">Email Address:</string>
    <string name="imageView33">This is an Image of the Email Icon</string>
    <string name="button4">RESET PASSWORD</string>
    <string name="button5">LOGOUT</string>
    <string name="textView18">Change Profile</string>
    <string name="imageView43">This is an Image of the Profile Icon</string>
    <string name="textView29">Full Name:</string>
    <string name="imageView44">This is an Image of the Phone Icon</string>
    <string name="textView31">Phone Number:</string>
</resources>