<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <item
        android:id="@+id/TheSecondDawnToolBarSettings"
        android:icon="@drawable/ic_settings"
        android:title="@string/titleSettings"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />

    <item
        android:id="@+id/TheSecondDawnToolBarHelp"
        android:title="@string/titleHelp"
        app:showAsAction="never" />

    <item
        android:id="@+id/TheSecondDawnToolBarVolume"
        android:title="@string/titleVolume"
        app:showAsAction="never" />

    <item
        android:id="@+id/TheSecondDawnToolBarColor"
        android:title="@string/titleColor"
        app:showAsAction="never" />

    <item
        android:id="@+id/TheSecondDawnToolBarReview"
        android:title="@string/titleReview"
        app:showAsAction="never" />

</menu>