<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_fan"
    android:orientation="vertical"
    tools:context=".SmartFanFrag">

    <TextView
        android:id="@+id/TheSecondDawnTextView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/textView11"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:textStyle="bold|italic" />

    <ImageView
        android:id="@+id/TheSecondDawnImageView16"
        android:layout_width="350dp"
        android:layout_height="200dp"
        android:layout_marginTop="50dp"
        android:layout_gravity="center"
        android:contentDescription="@string/imageView16"
        android:src="@drawable/smart_fan_1" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/TheSecondDawnSwitch8"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:layout_gravity="center"
        android:fontFamily="sans-serif-black"
        android:text="@string/switch8"
        android:textColor="#FFFFFF"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/theSecondDawnTextView27"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="sans-serif-black"
        android:layout_marginTop="25dp"
        android:text="@string/textView27"
        android:textColor="#F8F8F8"
        android:textSize="16sp" />

    <com.google.android.material.slider.Slider
        android:id="@+id/TheSecondDawnSlider1"
        android:layout_width="300dp"
        android:layout_height="25dp"
        android:layout_gravity="center"
        android:contentDescription="@string/slider1"
        android:value="10"
        android:valueFrom="0"
        android:valueTo="100"
        app:haloColor="#F80000" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:orientation="horizontal"
        android:id="@+id/TheSecondDawnRadioGroup">

        <RadioButton
            android:id="@+id/TheSecondDawnRadioButton1"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:text="@string/TheSecondDawnRadioButton1"
            android:textColor="#FDFDFD"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/TheSecondDawnRadioButton2"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:text="@string/TheSecondDawnRadioButton2"
            android:textColor="#FDFDFD"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/TheSecondDawnRadioButton3"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:text="@string/TheSecondDawnRadioButton3"
            android:textColor="#FFFFFF"
            android:textSize="16sp" />

    </RadioGroup>

    <Button
        android:id="@+id/TheSecondDawnButton3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:text="@string/button3"
        android:textColor="@color/snowwhite"
        app:layout_constraintBottom_toBottomOf="parent" />

</LinearLayout>