<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/TheSecondDawnNavHome"
            android:icon="@drawable/ic_home"
            android:title="@string/titleHome" />
    </group>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/TheSecondDawnNavVolume"
            android:icon="@drawable/ic_speaker"
            android:title="@string/titleSpeaker" />
    </group>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/TheSecondDawnNavFan"
            android:icon="@drawable/ic_fan"
            android:title="@string/titleFan" />
    </group>

</menu>