<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_main"
    tools:context=".SettingsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/TheSecondDawnImageButton3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:background="@null"
            android:contentDescription="@string/imageButton3"
            android:src="@drawable/ic_left_arrow_state" />

        <TextView
            android:id="@+id/TheSecondDawnTextView20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="-25dp"
            android:text="@string/textView20"
            android:textColor="@color/aqua"
            android:textSize="30sp"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/TheSecondDawnTextView33"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:text="@string/textView33"
            android:textColor="@color/teal_200"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/TheSecondDawnTextView34"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:text="@string/textView34"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/TheSecondDawnSwitch9"
            android:layout_width="wrap_content"
            android:layout_height="10dp"
            android:layout_gravity="center"
            android:text="@string/switch9"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/TheSecondDawnTextView35"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:text="@string/textView35"
            android:textColor="@color/teal_200"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/TheSecondDawnTextView36"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:text="@string/textView36"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold" />

        <SeekBar
            android:id="@+id/TheSecondDawnSeekBar2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </LinearLayout>
</ScrollView>